--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: DevTools
 main: DevTools\DevTools
 version: 1.14.0+dev
 api: [4.0.0]
-load: STARTUP
+load: SCAN
 author: PocketMine Team
 description: Helps develop and distribute PocketMine-MP plugins
 website: https://github.com/PocketMine/DevTools
